err.txt
warning: unused manifest key: dependencies.sb-rust-proto.name
warning: unused manifest key: dependencies.serde.featres
   Compiling rune v0.1.0 (/home/kat/Desktop/rune)
error[E0583]: file not found for module `fileserv`
 --> src/lib.rs:6:1
  |
6 | pub mod fileserv;
  | ^^^^^^^^^^^^^^^^^
  |
  = help: to create the module `fileserv`, create file "src/fileserv.rs" or "src/fileserv/mod.rs"

For more information about this error, try `rustc --explain E0583`.
error: could not compile `rune` (lib) due to previous error
